@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171028"
-#define public MagickPackageReleaseDate "snapshot-20171028"
+#define public MagickPackageVersionAddendum ".020171104"
+#define public MagickPackageReleaseDate "snapshot-20171104"
